--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -43,9 +43,10 @@ jobs:
         id: show_version
         run: cat version.properties
       - name: Delete previous tag and release
-        uses: ClementTsang/delete-tag-and-release@v0.4.0
+        uses: tychobrailleur/delete-tag-and-release@453626e2f16a2625a19e18d91e4cdf1f41624dde
         with:
           delete_release: true
+          delete_non_draft: true
           tag_name: ${{ steps.read_version_properties.outputs.tag }}
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
@@ -73,9 +74,10 @@ jobs:
           --data '{ "draft": false }'
       - name: If not dev-release delete previous short version tag
         if: ${{ steps.read_version_properties.outputs.tag != 'dev' }}
-        uses: ClementTsang/delete-tag-and-release@v0.3.1
+        uses: tychobrailleur/delete-tag-and-release@453626e2f16a2625a19e18d91e4cdf1f41624dde
         with:
           delete_release: true
+          delete_non_draft: true
           tag_name: ${{ steps.read_version_properties.outputs.shortVersion }}
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
